--- a/EmojiNote/Base.lproj/Main.storyboard
+++ b/EmojiNote/Base.lproj/Main.storyboard
@@ -80,11 +80,131 @@
                             <outlet property="delegate" destination="EfP-vb-pVs" id="eSi-Ib-Ibh"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Mup-LK-ij8"/>
+                    <navigationItem key="navigationItem" id="Mup-LK-ij8">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="9N5-IR-8Ib">
+                            <connections>
+                                <segue destination="BUg-Oa-x1x" kind="show" id="Xas-oC-66q"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nzd-vs-NFw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="605" y="542"/>
+        </scene>
+        <!--New Emoji Table View Controller2-->
+        <scene sceneID="xJb-zl-ncf">
+            <objects>
+                <tableViewController id="0ja-Yg-95J" customClass="NewEmojiTableViewController2" customModule="EmojiNote" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="z5l-QF-qje">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="Emoji" id="oEk-YU-dYh">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="34" id="Mc5-gF-okc">
+                                        <rect key="frame" x="0.0" y="55.333332061767578" width="393" height="34"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mc5-gF-okc" id="aPW-Ay-762">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="34"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kke-yG-Dhy">
+                                                    <rect key="frame" x="16" y="0.0" width="361" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="textChanged:" destination="0ja-Yg-95J" eventType="editingChanged" id="Luy-6J-det"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="kke-yG-Dhy" secondAttribute="bottom" id="IXD-6z-Ic8"/>
+                                                <constraint firstAttribute="trailing" secondItem="kke-yG-Dhy" secondAttribute="trailing" constant="16" id="Izc-fG-5Yr"/>
+                                                <constraint firstItem="kke-yG-Dhy" firstAttribute="leading" secondItem="aPW-Ay-762" secondAttribute="leading" constant="16" id="YM8-Kg-eCW"/>
+                                                <constraint firstItem="kke-yG-Dhy" firstAttribute="top" secondItem="aPW-Ay-762" secondAttribute="top" id="knx-rh-QgF"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Name" id="ImF-6c-icU">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="34" id="Zue-lT-dcg">
+                                        <rect key="frame" x="0.0" y="145.33333015441895" width="393" height="34"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Zue-lT-dcg" id="3EP-DB-KI7">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="34"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nkO-B2-uIh">
+                                                    <rect key="frame" x="16" y="0.0" width="361" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="textChanged:" destination="0ja-Yg-95J" eventType="editingChanged" id="swS-Gh-rkC"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="nkO-B2-uIh" secondAttribute="trailing" constant="16" id="2ux-3e-X4z"/>
+                                                <constraint firstAttribute="bottom" secondItem="nkO-B2-uIh" secondAttribute="bottom" id="SiG-mU-5mE"/>
+                                                <constraint firstItem="nkO-B2-uIh" firstAttribute="top" secondItem="3EP-DB-KI7" secondAttribute="top" id="a7s-7o-JRb"/>
+                                                <constraint firstItem="nkO-B2-uIh" firstAttribute="leading" secondItem="3EP-DB-KI7" secondAttribute="leading" constant="16" id="aJ8-Me-Sdk"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Description" id="PQ5-bU-yFb">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="34" id="aQt-LS-vfh">
+                                        <rect key="frame" x="0.0" y="235.33333015441895" width="393" height="34"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aQt-LS-vfh" id="YrG-ED-usg">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="34"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XNa-Ay-Ob8">
+                                                    <rect key="frame" x="16" y="0.0" width="361" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="textChanged:" destination="0ja-Yg-95J" eventType="editingChanged" id="dDg-hW-m9e"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="XNa-Ay-Ob8" secondAttribute="bottom" id="596-gQ-CIe"/>
+                                                <constraint firstAttribute="trailing" secondItem="XNa-Ay-Ob8" secondAttribute="trailing" constant="16" id="R1h-XD-B1K"/>
+                                                <constraint firstItem="XNa-Ay-Ob8" firstAttribute="leading" secondItem="YrG-ED-usg" secondAttribute="leading" constant="16" id="tBZ-Np-EKC"/>
+                                                <constraint firstItem="XNa-Ay-Ob8" firstAttribute="top" secondItem="YrG-ED-usg" secondAttribute="top" id="wRt-sE-uFx"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="0ja-Yg-95J" id="pgc-Ch-Xpk"/>
+                            <outlet property="delegate" destination="0ja-Yg-95J" id="qgD-dg-AvR"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="jAU-eT-eQA">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="ZHQ-VE-c4S"/>
+                        <barButtonItem key="rightBarButtonItem" title="Save" style="done" id="IfU-VC-tTK"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="descriptionTextField" destination="XNa-Ay-Ob8" id="U1j-UO-yWy"/>
+                        <outlet property="emojiTextField" destination="kke-yG-Dhy" id="api-Cu-5PH"/>
+                        <outlet property="nameTextField" destination="nkO-B2-uIh" id="8Tt-mW-tFc"/>
+                        <outlet property="saveButton" destination="IfU-VC-tTK" id="7AY-xi-Gia"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Yc-Kj-ent" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2301.5267175572517" y="541.54929577464793"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="v89-ey-T5s">
@@ -102,13 +222,35 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mzd-jg-KIg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-789" y="665"/>
+            <point key="canvasLocation" x="-137" y="542"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lVN-ze-bhq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BUg-Oa-x1x" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="TPU-Bl-Ef1"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="88g-aI-G81">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0ja-Yg-95J" kind="relationship" relationship="rootViewController" id="CYF-8O-u32"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cjf-bs-xHT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1573" y="542"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
